hphp/hack/test/typecheck/array_non_static.php.exp
File "array_non_static.php", line 8, characters 35-38:
Invalid expression in constant initializer (Parsing[1002])
